--- a/plugins/PubOffline/tmpl/dialog/send_to_queue.tmpl
+++ b/plugins/PubOffline/tmpl/dialog/send_to_queue.tmpl
@@ -70,8 +70,7 @@
     <mtapp:setting
         id="zip_dir"
         label_class="top-label"
-        label="<__trans phrase="Zip Offline Version">"
-        hint="Zip the contents of the Output File Path">
+        label="<__trans phrase="Zip Offline Version">">
       <input type="checkbox" name="zip" id="zip"<mt:If name="zip"> checked="checked"</mt:If> />
       <label for="zip">Zip the contents of the Output File Path.</label>
     </mtapp:setting>
