The Jumpstart should handle static content as well as assets.

--- a/plugins/PubOffline/tmpl/blog_config.tmpl
+++ b/plugins/PubOffline/tmpl/blog_config.tmpl
@@ -96,10 +96,10 @@
     <div class="actions-bar" style="clear: none;">
         <div class="actions-bar-inner pkg actions">
             <button
-                onclick="return openDialog(false, 'po_jumpstart_assets', 'blog_id=<mt:Var name="blog_id">')"
+                onclick="return openDialog(false, 'po_jumpstart', 'blog_id=<mt:Var name="blog_id">')"
                 class="primary-button"
-                title="Jumpstart Asset Handling"
-                >Jumpstart Asset Handling</button>
+                title="Jumpstart Asset and Static File Handling"
+                >Jumpstart Asset and Static File Handling</button>
         </div>
     </div>
 </mtapp:setting>
