--- a/plugins/PubOffline/tmpl/dialog/jumpstart.tmpl
+++ b/plugins/PubOffline/tmpl/dialog/jumpstart.tmpl
@@ -1,5 +1,4 @@
-<mt:setvarblock name="page_title">Publish Offline: Jumpstart Asset and Static File Handling</mt:setvarblock>
-<mt:setvarblock name="html_head" append="1"></mt:setvarblock>
+<mt:Var name="page_title" value="Publish Offline: Jumpstart this Blog">
 <mt:include name="dialog/header.tmpl">
 
 <form name="send_to_queue" method="post" action="<mt:Var name="script_url">">
@@ -9,16 +8,16 @@
 
 <mt:If name="enabled">
     <p>
-        Begin the Jumpstart to place all assets in this blog in the queue to
-        be handled for the offline version.
+        Begin the Jumpstart to place all assets, static content, and templated
+        content into Schwartz jobs to be run by run-periodic-tasks.
     </p>
 <mt:Else>
     <p>
         It appears that Publish Offline is not enabled on this blog. Publish
-        Offline must be enabled before the Asset Jumpstart can begin. (If you
-        have checked the Enable Publish Offline checkbox then immediately
-        clicked the Jumpstart Asset Handling button, you should save the
-        enabled state before clicking the Jumpstart Asset Handling button.)
+        Offline must be enabled before the Jumpstart can begin. (If you have
+        checked the Enable Publish Offline checkbox then immediately clicked
+        the Jumpstart button, you should save the enabled state before
+        clicking the Jumpstart button.)
     </p>
 </mt:If>
 
