--- a/plugins/PubOffline/tmpl/dialog/jumpstart.tmpl
+++ b/plugins/PubOffline/tmpl/dialog/jumpstart.tmpl
@@ -1,7 +1,7 @@
 <mt:Var name="page_title" value="Publish Offline: Jumpstart this Blog">
 <mt:include name="dialog/header.tmpl">
 
-<form name="send_to_queue" method="post" action="<mt:Var name="script_url">">
+<form method="post" action="<mt:Var name="script_url">">
     <input type="hidden" name="__mode" value="po_jumpstart" />
     <input type="hidden" name="jumpstart" value="1" />
     <input type="hidden" name="blog_id" value="<mt:Var name="blog_id">" />
