Support notification of multiple email addresses when creating an archive.

--- a/plugins/PubOffline/tmpl/dialog/create_archive.tmpl
+++ b/plugins/PubOffline/tmpl/dialog/create_archive.tmpl
@@ -17,7 +17,7 @@
         id="email"
         label_class="top-label"
         label="<__trans phrase="Notify when Complete">"
-        hint="Send an email notification to this email address when the archive process is complete."
+        hint="Send an email notification to this email address when the archive process is complete. Separate multiple addresses with a comma."
         show_hint="1">
             <input type="text" 
                 name="email" 
