--- a/plugins/PubOffline/tmpl/blog_config.tmpl
+++ b/plugins/PubOffline/tmpl/blog_config.tmpl
@@ -130,7 +130,7 @@
     id="jumpstart"
     label_class="left-label"
     label="<__trans phrase="Jumpstart this Blog">"
-    hint="An asset will be automatically copied or linked when the asset has been modified. However existing assets need a &ldquo;jumpstart&rdquo; to become part of the offline version. Similarly, static content will be copied during an upgrade but existing content needs a &ldquo;jumpstart&rdquo; to become part of the offline version. Additionally, the jumpstart will publish templates offline."
+    hint="An asset will be automatically copied or linked when the asset has been modified. However existing assets need a &ldquo;jumpstart&rdquo; to become part of the offline version. Similarly, static content will be copied during an upgrade but existing content needs a &ldquo;jumpstart&rdquo; to become part of the offline version. The jumpstart will also publish templates offline."
     show_hint="1">
 
     <div class="actions-bar" style="clear: none;">
