Added the URL Exception Manifest, and bumped to version 1.0.7.
The URL Exception Manifest allows an admin to specify URLs that should not be rewritten for the offline version of the site.

--- a/plugins/PubOffline/tmpl/blog_config.tmpl
+++ b/plugins/PubOffline/tmpl/blog_config.tmpl
@@ -140,6 +140,19 @@
 </mtapp:setting>
 
 <mtapp:setting
+    id="url_exception_manifest"
+    label_class="left-label"
+    label="<__trans phrase="URL Exception Manifest">"
+    hint="Their may be some URLs you don't want rewritten for the offline version. (That is, you want the URL to go to the same fully-qualified domain name whether part of the Offline version or not.) Leave this textarea empty to rewrite all URLs. Alternatively, specify fully-qualified domain name URLs to <em>not</em> be rewritten, one per line."
+    show_hint="1">
+    <textarea
+        id="url_exception_manifest"
+        name="url_exception_manifest"
+        rows="5"
+        class="full-width"><mt:Var name="url_exception_manifest" escape="html"></textarea>
+</mtapp:setting>
+
+<mtapp:setting
     id="jumpstart"
     label_class="left-label"
     label="<__trans phrase="Jumpstart this Blog">"
